<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentActivity"
    android:orientation="vertical">
    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageViewStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/caticon"/>
            <TextView
                android:id="@+id/textStudentTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/info_student"
                android:textSize="17dp"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/prenomRodica"
                android:layout_weight="2"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/emailRodica"
                android:layout_weight="3"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/textViewGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/groupeStudent"
                android:layout_weight="4"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/site_school"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/linkSchool"
                android:layout_weight="5"
                android:textSize="11dp"
                android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>