<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/contentLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <TextView
            android:id="@+id/textStudentTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_student"
            android:textSize="17dp"
            android:textAlignment="center"
            />
        <ImageView
            android:id="@+id/imageViewStudent"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textViewName"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textViewEmail"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textViewGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/groupeStudent"
                android:textAlignment="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/site_school"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/linkSchool"
            android:textSize="11dp"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>